fix: rpc chat, stream jwt verify interceptor on chat serivce
